--- a/src/components/button.css
+++ b/src/components/button.css
@@ -8,4 +8,21 @@
     border: none;
     border-right: var(--border-button);
     border-bottom: var(--border-button);
+    outline: none;
+}
+.button:active{
+    background-color: #ccc;
+}
+.button.double{
+    grid-column: span 2;
+}
+.button.triple{
+    grid-column: span 3;
+}
+.button.operation{
+    background-color: #fa8231;
+    color: #fff;
+}
+.button.button.operation{
+    background-color: #fa8231cc;
 }
